# fangcun

./: .gitignore  CLAUDE.md  README.md  app.py  cli.py  pyproject.toml  requirements.txt
core/: __init__.py  errors.py  extractor.py  layout.py  renderer.py  scraper.py  texture.py
docs/plans/: 2026-04-14-quality-hardening.md  determinism-audit-2026-04-14.md
scripts/: deploy_space.sh
tests/: conftest.py  test_cache.py  test_cli_concurrency.py  test_errors.py  test_extractor.py  test_layout.py  test_renderer.py  test_stroke_width.py  test_svg_export.py  test_texture.py  test_user_glyphs.py  test_version.py
tests/regression/: compare.py  conftest.py  corpus.yaml  run.py  test_layout_debug.py  test_scraper_consistency.py  test_stroke_width.py  test_variants.py
