[project]
name = "fangcun"
version = "1.2.0"
description = "极客禅 · 中国传统电子印章生成器"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=1.4",
    "gradio>=6.11.0",
    "numpy>=2.4.4",
    "opencc-python-reimplemented>=0.1.7",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pycryptodome>=3.23.0",
    "requests>=2.33.1",
    "rich>=13.0",
]

[project.scripts]
seal-cli = "cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:PIL.*",
    "ignore::DeprecationWarning:opencc.*",
]
markers = [
    "regression: visual regression tests (require network + cache)",
    "unit: fast isolated unit tests",
]
